<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="manageAlarmDialogFragment"
            type="com.kyg.sharegifticon.view.ManageAlarmDialogFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="true">

            <Button
                android:id="@+id/btNoAlarm"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:onClick="@{() -> manageAlarmDialogFragment.btNoAlarmClick()}"
                android:text="@string/ALARM_NO"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btOneDayAlarm"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> manageAlarmDialogFragment.btOneDayAlarmClick()}"
                android:text="@string/ALARM_ONE_DAY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btNoAlarm" />

            <Button
                android:id="@+id/btThreeDayAlarm"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> manageAlarmDialogFragment.btThreeDayAlarmClick()}"
                android:text="@string/ALARM_THREE_DAY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btOneDayAlarm" />

            <Button
                android:id="@+id/btFiveDayAlarm"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> manageAlarmDialogFragment.btFiveDayAlarmClick()}"
                android:text="@string/ALARM_FIVE_DAY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btThreeDayAlarm" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>