<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="drawerMenu"
            type="com.kyg.sharegifticon.view.DrawerMenu" />
    </data>

    <com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvMenuTitle"
                    style="@style/H3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MENU"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivManageAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> drawerMenu.ivManageAlarmClick()}"
                    android:src="@drawable/ic_baseline_access_alarm_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ivMenuClose"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/Black" />

                <ImageView
                    android:id="@+id/ivMenuClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> drawerMenu.ivMenuCloseClick()}"
                    android:src="@drawable/ic_baseline_close_24"
                    app:layout_constraintBottom_toBottomOf="@id/tvMenuTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvMenuTitle"
                    app:tint="@color/black" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvSendMyUid"
                    style="@style/Body1_Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> drawerMenu.tvSendMyUidClick()}"
                    android:text="@string/MY_INFO"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <include layout="@layout/divider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvMenuAddGifticon"
                    style="@style/Body1_Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> drawerMenu.tvMenuAddGifticonClick()}"
                    android:text="@string/ADD_GIFTICON"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvManageMember"
                    style="@style/Body1_Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> drawerMenu.tvManageMemberClick()}"
                    android:text="@string/MANAGE_MEMBER"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMenuAddGifticon" />

                <TextView
                    android:id="@+id/tvDeletedGifticon"
                    style="@style/Body1_Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> drawerMenu.tvDeletedGifticonClick()}"
                    android:text="@string/DELETE_GIFTICON"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvManageMember" />

                <TextView
                    android:id="@+id/tvMenuLogout"
                    style="@style/Body1_Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> drawerMenu.tvMenuLogoutClick()}"
                    android:text="@string/LOGOUT"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>
</layout>